--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@ main {
 
 article img {
     width: 100%;
+    border: 4px solid white;
 
 }
 
@@ -52,7 +53,7 @@ article img {
 
 
 .border {
-    border: 1px solid black;
+    border: 4px solid white;
 }
 
 /*Media queries til mobile landscape*/
@@ -95,7 +96,7 @@ article img {
 
         }
         .border {
-            border: 1px solid black;
+            border: 4px solid white;
             width: 310px;
             height: 310px;
         }
@@ -105,7 +106,7 @@ article img {
             padding-top: 0px;
             padding-left: 12.5px;
             padding-right: 12.5px;
-            font-size: 14.6px;
+            font-size: 14.3px;
         }
 
 
