--- a/smykker.css
+++ b/smykker.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  margin: 0;
+    margin: 0;
     background-image: url(1.jpg);
     background-size: 100%;
 }
@@ -26,7 +26,9 @@ main {
     background-color: transparent;
     color: #F18FAB;
     padding: 12px;
-    border: 1px solid #F18FAB;
+    font-weight: 600;
+    background-color: white;
+    border: none;
     cursor: pointer;
     width: 360px;
     font-size: 16px;
@@ -34,10 +36,7 @@ main {
     text-align: left;
 }
 
-.dropknap:hover {
-    color: black;
 
-}
 
 .dropdown {
     position: relative;
@@ -47,8 +46,8 @@ main {
 .content {
     display: none;
     position: absolute;
-    background-color: transparent;
-    border: 1px solid #F18FAB;
+    background-color: white;
+
     z-index: 1;
     width: 360px;
 }
@@ -60,7 +59,6 @@ main {
     border: 1px solid #F18FAB;
 }
 
-.content a:hover {}
 
 .visContent {
     display: block;
@@ -98,6 +96,7 @@ main {
     background-color: transparent;
     border: none;
     color: #F18FAB;
+    font-weight: 600;
     cursor: pointer;
     padding-left: 40pxw;
     padding-right: 40px;
@@ -148,7 +147,7 @@ main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 20px;
-        margin-top: 100px;
+        margin-top: 110px;
 
     }
 
@@ -167,7 +166,7 @@ main {
         float: right;
     }
 
-    .menu_item{
+    .menu_item {
         padding-left: 10px;
         padding-right: 15px;
     }
@@ -195,13 +194,13 @@ main {
     }
 
 
-    nav{
+    nav {
         width: 50%;
 
 
     }
 
-    .menu_item{
+    .menu_item {
         padding-left: 20px;
         padding-right: 20px;
 
@@ -230,7 +229,7 @@ main {
     }
 
 
-    nav{
+    nav {
         width: 45%
     }
 
