--- a/vaerkstedet.css
+++ b/vaerkstedet.css
@@ -1,91 +1,207 @@
-body {
-    background-image: ;
+/*Overordnede regler for styling*/
+
+* {
+    box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+    background-image: url(1.jpg);
+    background-size: 100%;
+
+}
+
+h1 {
+    font-family: 'Raleway', sans-serif;
+
+}
+
+p {
+    font-family: 'Montserrat', sans-serif;
+}
+
+/* Mobile first version*/
 
 main {
-    width: 290px;
+    width: 360px;
     margin: 0 auto;
+    margin-top: 100px;
 }
 
-main img{
-    width: 50%;
+/* style til top icon*/
+
+.fas {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 5;
+    cursor: pointer;
+
 }
 
-main h1{
+article img {
+    width: 100%;
+    border: 4px solid white;
 
 }
 
-main p{
-
+.wpPage2 {
+    padding: 20px;
 }
 
-main{
-    display: grid;
-    grid-template-columns: repeat (2, 1fr);
-    grid-template-rows: repeat (10, 1fr);
+
+
+.border {
+    border: 1px solid black;
 }
 
 /*Media queries til mobile landscape*/
 
-@media screen and (min-width:627px){
-    main{
+@media screen and (min-width:627px) {
+    main {
         width: 500px;
     }
 
-    main img{
-        width: 50%;
+
+    /*Media queries til tablet portrait*/
+    @media screen and (min-width:768px) {
+        main {
+            width: 620px;
+        }
+
+        main {}
+
+        #container {
+            width: 620px;
+
+        }
+
+        #contaner1 {
+            width: 620px;
+            display: flex;
+            flex-wrap: wrap;
+
+
+        }
+
+        #container1 img {
+            width: 49.6%;
+        }
 
     }
-}
 
-/*Media queries til tablet portrait*/
-
-@media screen and (min-width:768px){
-    main{
-        width: 600px;
-    }
-
-    main img{
-
-    }
+    /*Media queries til tablet landscape*/
+    @media screen and (min-width:1024px) {
+        main {
+            width: 850px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 30px;
+        }
 
 
-}
+        #container {
+            width: 500px;
 
-/*Media queries til tablet landscape*/
+        }
 
-@media screen and (min-width:1024px){
-    main{
-        width: 750px;
-    }
+        #container1 {
+            width: 530px;
 
-    main img{
+        }
 
-    }
-}
-
-/*Media queries til 1200px bredde*/
-
-@media screen and (min-width:1200px){
-    main{
-        width: 900px;
-    }
-
-    main img{
-
-    }
-}
-
-/*Media queries til 1500px bredde*/
-
-@media screen and (min-width:1500px){
-    main{
-        width: 1000px;
-    }
-
-    main img{
-
-    }
-}
+        #container1 img {
+            width: 60%;
+        }
 
 
+        /*Media queries til 1200px bredde*/
+        @media screen and (min-width:1200px) {
+            main {
+                width: 900px;
+            }
+
+            #container {
+                width: 450px;
+
+            }
+
+            #container1 {
+                width: 450px;
+
+            }
+
+            #container2 {
+                width: 450px;
+                margin-top: -20px;
+
+
+
+            }
+            .border {
+                border: 1px solid black;
+                width: 450px;
+                height: 450px;
+            }
+
+            .wpPage2 {
+                padding: 60px;
+                font-size: 16px;
+            }
+
+
+
+            #container3 {
+                width: 450px;
+                margin-top: -39px;
+            }
+
+
+        }
+
+        /*Media queries til 1500px bredde*/
+        @media screen and (min-width:1500px) {
+            main {
+                width: 1000px;
+            }
+
+            #container {
+                width: 500px;
+
+            }
+
+            #container1 {
+                width: 500px;
+
+            }
+
+            #container2 {
+                width: 500px;
+                margin-top: -20px;
+
+
+
+            }
+            .border {
+                border: 1px solid black;
+                width: 500px;
+                height: 500px;
+            }
+
+            .wpPage2 {
+                padding-top: 94px;
+                padding-bottom: 92px;
+                padding-left: 60px;
+                padding-right: 60px;
+                font-size: 16px;
+            }
+
+
+
+            #container3 {
+                width: 500px;
+                margin-top: -39px;
+            }
+
+        }
