--- a/kontakt.css
+++ b/kontakt.css
@@ -1,6 +1,7 @@
-*{
+* {
     box-sizing: border-box;
 }
+
 body {
     margin: 0;
     background-image: url(1.jpg);
@@ -13,89 +14,94 @@ main {
     margin-top: 100px;
 }
 
-main iframe{
-    width: 100%;
-    height: 400px;
+main iframe {
+    width: 360px;
+    height: 360px;
+
 }
 
-main h1{
+main h1 {
     font-family: 'Raleway', sans-serif;
 
 }
 
-main p{
+main p {
     font-family: 'Montserrat', sans-serif;
 }
 
-#container a{
+#container a {
     color: #F18FAB;
     text-decoration: none;
 }
 
-#container a:hover{
+#container a:hover {
     text-decoration: underline;
 }
 
-#main_grid{
+#main_grid {
     padding-top: 2vw;
 }
 
-
 /*Media queries til mobile landscape*/
 
-@media screen and (min-width:627px){
-    main{
+@media screen and (min-width:627px) {
+    main {
         width: 500px;
     }
 
+    main iframe {
+        width: 500px;
+        height: 500px;
+    }
 
 }
 
 /*Media queries til tablet portrait*/
 
-@media screen and (min-width:768px){
-    main{
+@media screen and (min-width:768px) {
+    main {
         width: 620px;
     }
 
-    #main_grid{
+    #main_grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 10px;
 
 
     }
-        #container{
+    #container {
         width: 260px;
 
     }
 
-    #container1{
+    main iframe {
         width: 360px;
-
+        height: 360px;
     }
+
 }
 
 /*Media queries til tablet landscape*/
 
-@media screen and (min-width:1024px){
-    main{
+@media screen and (min-width:1024px) {
+    main {
         width: 850px;
     }
 
-     #main_grid{
+    #main_grid {
         grid-gap: 20px;
 
     }
 
-        #container{
+    #container {
         width: 330px;
 
     }
 
-    #container1{
+    main iframe {
         width: 520px;
-
+        height: 520px;
     }
 
 
@@ -103,37 +109,36 @@ main p{
 
 /*Media queries til 1200px bredde*/
 
-@media screen and (min-width:1200px){
-    main{
+@media screen and (min-width:1200px) {
+    main {
         width: 900px;
     }
 
-         #container{
+    #container {
         width: 250px;
 
     }
 
-    #container1{
+    main iframe {
         width: 630px;
-
+        height: 630px;
     }
 }
 
 /*Media queries til 1500px bredde*/
 
-@media screen and (min-width:1500px){
-    main{
+@media screen and (min-width:1500px) {
+    main {
         width: 1000px;
     }
 
-    #container{
+    #container {
         width: 350px;
     }
 
-    #container1{
+    main iframe {
         width: 730px;
+        height: 730px;
     }
 
-
 }
-
