--- a/footer.css
+++ b/footer.css
@@ -1,58 +1,58 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-body{
-background-color: transparent;
+body {
+    background-color: transparent;
     margin: 0;
 }
 
-footer{
-padding-top: 4vw;
+footer {
+    padding-top: 4vw;
     width: 100%;
 
 }
 
-footer h1{
+footer h1 {
     font-family: 'Raleway', sans-serif;
     border-bottom: 1px solid black;
     font-size: 20px;
 
 }
 
-footer p{
+footer p {
     font-family: 'Montserrat', sans-serif;
 }
 
-.soME{
+.soME {
     display: inline-block;
     margin-right: 10px;
 }
 
 
 
-footer{
+footer {
     width: 360px;
     margin: 0 auto;
 }
 
-footer a{
+footer a {
     color: black;
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
 }
 
-footer a:hover{
+footer a:hover {
     text-decoration: underline;
 }
 
-form{
+form {
     width: 100%;
     background-color: white;
     padding: 5px;
 }
 
-#send{
+#tilmeld {
     width: 70%;
     padding: 8px;
     color: #F18FAB;
@@ -60,54 +60,54 @@ form{
     background-color: white;
 }
 
-#email{
+#email {
     color: black;
     padding: 8px;
     width: 70%;
 }
 
-@media screen and (min-width:627px){
-   footer{
+@media screen and (min-width:627px) {
+    footer {
         width: 500px;
     }
 }
 
-@media screen and (min-width:768px){
+@media screen and (min-width:768px) {
 
-footer{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 40px;
-     width: 620px;
-    margin: 0 auto;
-}
-
-}
-
-@media screen and (min-width:1024px){
-
-footer{
-     width: 850px;
+    footer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-gap: 40px;
+        width: 620px;
+        margin: 0 auto;
+    }
 
 }
 
-}
+@media screen and (min-width:1024px) {
 
-@media screen and (min-width:1200px){
+    footer {
+        width: 850px;
 
-footer{
-     width: 900px;
-
-}
+    }
 
 }
 
-@media screen and (min-width:1500px){
+@media screen and (min-width:1200px) {
 
-footer{
-     width: 1000px;
+    footer {
+        width: 900px;
+
+    }
 
 }
+
+@media screen and (min-width:1500px) {
+
+    footer {
+        width: 1000px;
+
+    }
 
 }
