--- a/index.css
+++ b/index.css
@@ -54,6 +54,9 @@ article img {
 
 .border {
     border: 4px solid white;
+    width: 360px;
+    height: 360px;
+    margin-top: 12px;
 }
 
 /*Media queries til mobile landscape*/
@@ -61,6 +64,12 @@ article img {
 @media screen and (min-width:627px) {
     main {
         width: 500px;
+    }
+
+    .border {
+        width: 500px;
+        height: 500px;
+        padding: 70px;
     }
 
 
@@ -91,7 +100,8 @@ article img {
 
         #container2 {
             width: 310px;
-            margin-top: -20px;
+
+
 
 
 
@@ -100,6 +110,8 @@ article img {
             border: 4px solid white;
             width: 310px;
             height: 310px;
+            padding: 0;
+            margin: 0;
         }
 
         .wpPage2 {
@@ -114,7 +126,7 @@ article img {
 
         #container3 {
             width: 310px;
-            margin-top: -39px;
+            margin-top: -19px;
         }
 
 
@@ -139,7 +151,7 @@ article img {
 
         #container2 {
             width: 425px;
-            margin-top: -20px;
+
 
 
 
@@ -159,7 +171,7 @@ article img {
 
         #container3 {
             width: 425px;
-            margin-top: -39px;
+
         }
 
 
@@ -183,7 +195,7 @@ article img {
 
             #container2 {
                 width: 450px;
-                margin-top: -20px;
+
 
 
 
@@ -203,7 +215,7 @@ article img {
 
             #container3 {
                 width: 450px;
-                margin-top: -39px;
+
             }
 
 
@@ -227,7 +239,7 @@ article img {
 
             #container2 {
                 width: 500px;
-                margin-top: -20px;
+
 
 
 
@@ -250,7 +262,7 @@ article img {
 
             #container3 {
                 width: 500px;
-                margin-top: -39px;
+
             }
 
         }
