--- a/betingelser.css
+++ b/betingelser.css
@@ -23,6 +23,16 @@ main p{
     font-family: 'Montserrat', sans-serif;
 }
 
+.fas {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 5;
+    cursor: pointer;
+
+}
+
 
 /*Media queries til mobile landscape*/
 
