--- a/index.css
+++ b/index.css
@@ -20,6 +20,16 @@ p {
     font-family: 'Montserrat', sans-serif;
 }
 
+.fas {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 5;
+    cursor: pointer;
+
+}
+
 /* Mobile first version*/
 
 main {
