--- a/kontakt.css
+++ b/kontakt.css
@@ -29,6 +29,16 @@ main p {
     font-family: 'Montserrat', sans-serif;
 }
 
+.fas {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 5;
+    cursor: pointer;
+
+}
+
 #container a {
     color: #F18FAB;
     text-decoration: none;
