--- a/single.css
+++ b/single.css
@@ -19,6 +19,16 @@ main p{
     font-family: 'Montserrat', sans-serif;
 }
 
+.fas {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 5;
+    cursor: pointer;
+
+}
+
 .image{
     width: 100%;
     border: 8px solid white;
