--- a/smykker.css
+++ b/smykker.css
@@ -16,6 +16,16 @@ main {
     padding-top: 60px;
 }
 
+.fa {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 5;
+    cursor: pointer;
+
+}
+
 /* filtrerings dropdown knap*/
 
 #filtrering {
