--- a/single.css
+++ b/single.css
@@ -8,7 +8,7 @@ body {
 main {
     width: 360px;
     margin: 0 auto;
-    padding-top: 60px;
+    padding-top: 40px;
 }
 
 main h1{
@@ -46,6 +46,7 @@ main p{
     padding: 4px;
     width: 100%;
     cursor: pointer;
+    color: #F18FAB;
     font-family: 'Montserrat', sans-serif;
     margin-top: 10px;
 }
@@ -55,6 +56,7 @@ main p{
 @media screen and (min-width:627px){
     main{
         width: 500px;
+        padding-top: 60px;
     }
 
 
@@ -134,7 +136,7 @@ main p{
 @media screen and (min-width:1500px){
     main{
         width: 1000px;
-        padding-top: 140px;
+        padding-top: 150px;
     }
 
     .image{
