--- a/header.css
+++ b/header.css
@@ -15,15 +15,15 @@ body{
 
 
 #logo{
-    background-image: url(marielogo-01.svg);
+    background-image: url(loulogo-04.svg);
     background-size: 300% 100%;
-    width: 26.2%;
-    height: 9vw;
+    width: 28.39vw;
+    height: 10.774vw;
      z-index: 11;
     position: relative;
     float: right;
    transform: scale(1.2);
-    margin-right: 10px;
+    margin-right: 30px;
     margin-top: 10px;
     cursor: pointer;
 
@@ -35,6 +35,7 @@ body{
     animation-duration: 1s;
     animation-timing-function: steps(3);
     animation-iteration-count: infinite;
+
 
 
 }
@@ -89,16 +90,17 @@ body{
 
 
     #logo1{
-    background-image: url(marielogo-01.svg);
+    background-image: url(loulogo-04.svg);
     background-size: 300% 100%;
-    width: 26.2%;
-    height: 9vw;
+    width: 28.49vw;
+    height: 10.774vw;
      z-index: 11;
     position: relative;
     float: left;
    transform: scale(1);
-    margin-right: 10px;
+    margin-left: 10px;
         cursor: pointer;
+
 
 
 }
